# assignment_three_algorithmic_redistricting

./: .gitignore  README.md  adjacent_counties.json  data_preparation.py  ohio_counties.csv  output.txt  pyproject.toml  redistrict.txt
