[project]
name = "assignment-three-algorithmic-redistricting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]
